# rescue-prime

./: Cargo.toml
src/: lib.rs  main.rs  traits.rs
src/common/: matrix.rs  mod.rs  params.rs  sbox.rs  utils.rs
src/rescue_prime/: mod.rs  params.rs  rescue_prime.rs
