[package]
name = "rescue-prime"
description = "Rescue prime"
keywords = ["poseidon", "rescue", "rescue prime", "sponge", "duplex sponge", "algebraic hash function", "arithmetization oriented hash function"]
version = "0.4.0"
authors = ["Sait Imamoglu <si@matterlabs.dev>, Filip Lazovic <lazovicff@gmail.com>"]
edition = "2018"

[dependencies]
num-bigint = "0.3"
num-integer = "0.1"
num-iter = "0.1"
rand = "0.4"
byteorder = "1"
num-traits = "0.2"
sha3 = "0.9.1"
hex = "0.4"

[dependencies.franklin_crypto]
package = "franklin-crypto"
features = ["plonk"]
git = "https://github.com/matter-labs/franklin-crypto"
branch = "dev"